feat(admin,server): add workshop team management and default user password reset
