# apps/server/src/main/java/com/niceday/workshop/api/dto/TeamResponse.java
@@ -1,0 +1,7 @@
+package com.niceday.workshop.api.dto;
+
+public record TeamResponse(
+        String id,
+        String name
+) {
+}
